--- a/index.css
+++ b/index.css
@@ -42,11 +42,11 @@ body {
 main {
     padding: 20px;
     background-color: blue;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 h1 {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     padding: 15px;
     margin: 0px -20px;
     text-align: center;
