--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ header {
 }
 
 nav {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(246, 246, 246);
     padding: 20px;
 }
 
@@ -24,7 +24,7 @@ nav ul {
 }
 
 nav a {
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
@@ -85,6 +85,32 @@ footer p {
     font-size: 25px;
 }
 
+
+
+
+div.quadrado {
+    display: inline-block;
+    border: 2px solid rgb(0, 0, 0);
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    background-color: aquamarine;
+    
+    
+}
+
+div#q1 {
+    background-color: skyblue;
+}
+
+div#q2 {
+    background-image: linear-gradient(to bottom, yellow, rgb(255, 0, 85));
+}
+
+div#q3 {
+    background-image: url(imagenss/pattern003.png);
+
+}
 
 
 
